<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 TIBCO Software,Inc.All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software:you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation,either version 3of the License,or
  ~ (at your option)any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY;without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android.If not,see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/im_logo_single_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />

        <android.support.v7.widget.CardView
            style="@style/Widget.JasperMobile.CardView.Auth.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/js_dark_gray"
            card_view:contentPadding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/aliasEdit"
                    style="@style/Widget.JasperMobile.EditText.AddAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:hint="@string/hint_alias"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/serverUrlEdit"
                    style="@style/Widget.JasperMobile.EditText.AddAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_server_url"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/organizationEdit"
                    style="@style/Widget.JasperMobile.EditText.AddAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_organization"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/usernameEdit"
                    style="@style/Widget.JasperMobile.EditText.AddAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/passwordEdit"
                    style="@style/Widget.JasperMobile.EditText.AddAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        style="@style/Widget.JasperMobile.CardView.Auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/addAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_login_btn_gray"
                            android:text="@string/add_account"
                            android:textColor="@android:color/white" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/tryDemoContainer"
                        style="@style/Widget.JasperMobile.CardView.Auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tryDemo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_login_btn_blue"
                            android:text="@string/try_demo"
                            android:textColor="@android:color/white" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>