...
    <string name="nd_drawer_close">close</string>
    <string name="nd_manage_accounts">Manage accounts</string>
    <string name="nd_select_account">Select Account</string>

    <!-- Home Activity -->
    <string name="h_repository_label">Repository</string>
    <string name="h_library_label">Library</string>

    <!-- Password Dialog -->
    <string name="h_ad_title_server_sign_in">Server sign-in</string>
    <string name="h_ad_label_wrong_password">The username or password is incorrect. Re-enter your credentials.</string>
    <string name="h_ad_label_server_profile">Server Profile</string>

...
    <string name="spm_delete_btn">Delete</string>

    <!-- Server Profile Activity -->
    <string name="sp_save_btn">Save</string>

    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>
    <string name="sp_error_duplicate_alias">Duplicate account name.</string>
    <string name="sp_error_reserved_alias">Alias reserved.</string>

    <!-- Repository Activity -->
    <string name="resources_not_found">No resources found</string>
    <string name="r_search_nothing_to_display">No items match your search.</string>

    <!-- Action Bar -->
...
