<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 TIBCO Software,Inc.All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software:you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation,either version 3of the License,or
  ~ (at your option)any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY;without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android.If not,see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_navigation"
        style="@style/Widget.JasperMobile.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <FrameLayout
            android:id="@+id/tb_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow_light" />

</LinearLayout>